# Refrigerator

./: .gitignore  .gitmodules  CMakeLists.txt  Compressor.hpp  Container.hpp  Fluid.hpp  FluidCalculator.hpp  Types.hpp  main.cpp
Components/: Compressor.hpp  Container.hpp  Exchanger.hpp  ExpansionValve.hpp
Helpers/: Limit.hpp  Map.hpp
Types/: Density.hpp  Enthalpy.hpp  Enthropy.hpp  FloatingType.hpp  Mass.hpp  Milliseconds.hpp  NumericTypeBase.hpp  Operators.inc  Percent.hpp  Pressure.hpp  Rpm.hpp  Seconds.hpp  Temperature.hpp  Volume.hpp
